<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    android:padding="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/ic_other_appname"
            android:contentDescription="@string/app_icon" />
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:textSize="@dimen/_12ssp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@+id/iv_app_icon"
            android:layout_toStartOf="@+id/iv_delete"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/ic_action_uninstall"
            android:contentDescription="@string/app_uninstall" />

    </RelativeLayout>
</android.support.v7.widget.CardView>