<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    tools:context="com.app.thestream.blacklist.activity.BlackListRemoveActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        android:gravity="center"
        android:text="@string/access_denied"
        android:textColor="@color/title_black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/forbidden_message"
        android:textSize="@dimen/_14ssp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_app_list"
        android:layout_below="@+id/tv_description"
        android:layout_above="@+id/tv_cancel"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:id="@+id/tv_cancel"
        android:background="@color/white"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:textAllCaps="true"
        android:textSize="@dimen/_12ssp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="wrap_content" />
</RelativeLayout>